# game-digit-trainer

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt  一键启动.cmd  安装依赖.cmd  比对标题.cmd  比对标题服务.cmd
docs/: studio-recognize-digits.md
docs/superpowers/plans/: 2026-07-20-line-first-ux.md
docs/superpowers/specs/: 2026-07-17-game-digit-trainer-design.md  2026-07-20-line-crnn-design.md  2026-07-20-region-recognize-char-model-design.md  2026-07-20-verify-exported-model-design.md
game_digit_trainer/: __init__.py  __main__.py  backup.py  balance.py  box_ops.py  capture.py  confusion.py  export_line_onnx.py  export_onnx.py  gold.py  hard_examples.py  labels.py  line_data.py  line_eval.py  model.py  model_crnn.py  predict.py  predict_line.py  preprocess.py  project.py  quality.py  regression.py  sample_meta.py  segment.py  studio_pack.py  templates.py  train.py  train_line.py  window_capture.py
game_digit_trainer/gui/: __init__.py  app.py  bootstrap_preview.py  deps.py  region_capture.py  review_tab.py  theme.py  train_tab.py  train_worker.py  ui_prefs.py  widgets.py  work_tab.py
tests/: test_backup_confusion.py  test_balance_meta.py  test_box_ops_studio.py  test_export.py  test_gold_quality.py  test_labels.py  test_line_crnn.py  test_line_pending.py  test_line_ux_improvements.py  test_region_recognize.py  test_segment.py  test_verify_model.py
tools/: create_github_repo.py  match_same_title.py
