[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "game-digit-trainer"
version = "0.1.0"
description = "游戏 HUD 多字体数字：切字、修正、训练小 CNN、导出 ONNX"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "game-digit-trainer" }]
dependencies = [
  "numpy>=1.26",
  "opencv-python-headless>=4.8",
  "Pillow>=10.0",
  "PyQt6>=6.5",
  "torch>=2.1",
  "onnx>=1.15",
  "onnxscript>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
game-digit-trainer = "game_digit_trainer.__main__:main"

[tool.setuptools.packages.find]
include = ["game_digit_trainer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
